--- a/Source/CarsSystem.MVP/CarsSystem.MVP.csproj
+++ b/Source/CarsSystem.MVP/CarsSystem.MVP.csproj
@@ -47,6 +47,10 @@
     <Compile Include="AllCars\AllCarsPresenter.cs" />
     <Compile Include="AllCars\AllCarsViewModel.cs" />
     <Compile Include="AllCars\IAllCarsViewModel.cs" />
+    <Compile Include="CarDetails\CarDetailsPresenter.cs" />
+    <Compile Include="CarDetails\CarDetailsViewModel.cs" />
+    <Compile Include="CarDetails\CarGetDataEventArgs.cs" />
+    <Compile Include="CarDetails\ICarDetailsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -55,7 +59,6 @@
   <ItemGroup>
     <Folder Include="AddCustomer\" />
     <Folder Include="AllCustomers\" />
-    <Folder Include="CarDetails\" />
     <Folder Include="CustomerDetails\" />
     <Folder Include="FilterByAnnualCheckUp\" />
     <Folder Include="FilterByInsurance\" />
