--- a/Source/CarsSystem.MVP/CarsSystem.MVP.csproj
+++ b/Source/CarsSystem.MVP/CarsSystem.MVP.csproj
@@ -55,6 +55,10 @@
     <Compile Include="CarDetails\CarDetailsViewModel.cs" />
     <Compile Include="CarDetails\CarGetDataEventArgs.cs" />
     <Compile Include="CarDetails\ICarDetailsViewModel.cs" />
+    <Compile Include="CustomerDetails\CustomerDetailsEventArgs.cs" />
+    <Compile Include="CustomerDetails\CustomerDetailsPresenter.cs" />
+    <Compile Include="CustomerDetails\CustomerDetailsViewModel.cs" />
+    <Compile Include="CustomerDetails\ICustomerDetailsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,7 +66,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AddCustomer\" />
-    <Folder Include="CustomerDetails\" />
     <Folder Include="FilterByAnnualCheckUp\" />
     <Folder Include="FilterByInsurance\" />
     <Folder Include="FilterByVignette\" />
